--- a/electron/package.json
+++ b/electron/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "electron": "^2.0.8",
     "electron-packager": "^12.1.1"
+  },
+  "dependencies": {
+    "electron-settings": "^3.2.0",
+    "electron-store": "^2.0.0"
   }
 }
