--- a/electron/package.json
+++ b/electron/package.json
@@ -13,7 +13,9 @@
     "electron-packager": "^12.1.1"
   },
   "dependencies": {
-    "electron-settings": "^3.2.0",
-    "electron-store": "^2.0.0"
+    "bootstrap": "^4.1.3",
+    "electron-store": "^2.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
   }
 }
