--- a/electron/package.json
+++ b/electron/package.json
@@ -16,6 +16,8 @@
     "bootstrap": "^4.1.3",
     "electron-store": "^2.0.0",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "csvtojson": "^2.0.6",
+    "jsontoxml": "^1.0.0"
   }
 }
