--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "name": "pps-diagnosis-import",
   "version": "1.0.0",
-  "description": "wisconsin pps diagnosis import tool",
-  "main": "index.js",
+  "description": "",
+  "main": "main.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "electron ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/patricksinger/pps-diagnosis-import.git"
-  },
-  "author": "Patrick Singer",
+  "author": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/patricksinger/pps-diagnosis-import/issues"
+  "devDependencies": {
+    "electron": "^2.0.8",
+    "electron-builder": "^20.33.2",
+    "electron-packager": "^12.1.1"
   },
-  "homepage": "https://github.com/patricksinger/pps-diagnosis-import#readme",
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "electron-store": "^2.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4",
     "csvtojson": "^2.0.6",
     "jsontoxml": "^1.0.0"
   }
