--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "electron-store": "^2.0.0",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.4",
+    "clipboard": "^2.0.3",
     "csvtojson": "^2.0.6",
-    "jsontoxml": "^1.0.0"
+    "electron-store": "^2.0.0",
+    "ionicons": "^4.4.6",
+    "jquery": "^3.3.1",
+    "jsontoxml": "^1.0.0",
+    "popper.js": "^1.14.4"
   }
 }
